--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="tab_home">首页</string>
+    <string name="tab_friends">朋友</string>
+    <string name="tab_camera">相机</string>
+    <string name="tab_messages">消息</string>
+    <string name="tab_profile">我的</string>
 </resources>
